<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".InfoAppActivity">

    <LinearLayout
        android:layout_width="@dimen/_276sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/_30sdp">
        <ImageView
            android:onClick="startMain"
            android:id="@+id/startSetting"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/icon_back"/>
        <TextView
            style="@style/TextTitlePage"
            android:layout_marginStart="0dp"
            android:text="@string/info"/>
    </LinearLayout>

    <TextView
        style="@style/TextTitle"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/info_title"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp">
        <TextView
            style="@style/TextMainDark"
            android:text="@string/info_user_name"/>
        <TextView
            android:id="@+id/user_name"
            style="@style/TextMainDark"
            android:layout_marginStart="@dimen/_5sdp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp">
        <TextView
            style="@style/TextMainDark"
            android:text="@string/info_user_email"/>
        <TextView
            android:id="@+id/user_email"
            style="@style/TextMainDark"
            android:layout_marginStart="@dimen/_5sdp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:onClick="viewInfoUser"
        android:outlineSpotShadowColor="@android:color/transparent"
        android:layout_width="@dimen/_276sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center_horizontal">
        <LinearLayout
            android:id="@+id/info_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/TextTitle"
                    android:layout_width="@dimen/_258sdp"
                    android:text="@string/info_users_title"/>
                <ImageView
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/icon_info"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/info_user_details"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10sdp">
                <TextView
                    style="@style/TextMainDark"
                    android:text="@string/info_users_subtitle1"/>
                <TextView
                    style="@style/TextMainDark"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/info_users_subtitle2"/>
                <TextView
                    style="@style/TextMainDark"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/info_users_subtitle3"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:onClick="viewInfoAuthor"
        android:outlineSpotShadowColor="@android:color/transparent"
        android:layout_width="@dimen/_276sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center_horizontal">
        <LinearLayout
            android:id="@+id/info_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/TextTitle"
                    android:layout_width="@dimen/_258sdp"
                    android:text="@string/info_author_title"/>
                <ImageView
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/icon_info"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/info_author_details"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10sdp">
                <TextView
                    style="@style/TextMainDark"
                    android:text="@string/info_author_fio"/>
                <TextView
                    style="@style/TextMainDark"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/info_author_group"/>
                <TextView
                    style="@style/TextMainDark"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/info_author_date"/>
                <TextView
                    style="@style/TextMainDark"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/info_author_email"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>