<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/word_dialog"
        android:layout_width="@dimen/_216sdp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp">
        <androidx.cardview.widget.CardView
            android:id="@+id/v_word_dialog_sound"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_margin="@dimen/_10sdp"
            android:backgroundTint="@color/btn_blue">
            <ImageView
                android:src="@drawable/icon_sound"
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/v_word_dialog_close"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_gravity="end"
            android:layout_margin="@dimen/_10sdp"
            android:backgroundTint="@color/btn_blue">
            <ImageView
                android:src="@drawable/icon_close"
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>
        <ImageView
            android:id="@+id/v_word_dialog_img"
            android:layout_width="@dimen/_116sdp"
            android:layout_height="@dimen/_116sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_gravity="center_horizontal" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_166sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/v_word_dialog_en"
                style="@style/TextAccentDark"
                android:text="@string/word_card_en"/>
            <TextView
                android:id="@+id/v_word_dialog_ru"
                style="@style/TextMainDark"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/_10sdp"
                android:text="@string/word_card_ru"/>
            <TextView
                android:id="@+id/v_word_dialog_type"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp"
                style="@style/TextAccentDark"
                android:text="@string/word_card_type"/>
            <TextView
                android:id="@+id/v_word_dialog_description_en"
                style="@style/TextAccentDark"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp"
                android:text="@string/word_card_description_en"/>
            <TextView
                android:id="@+id/v_word_dialog_description_ru"
                style="@style/TextMainDark"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/_10sdp"
                android:text="@string/word_card_description_ru"/>
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp"
                style="@style/TextAccentDark"
                android:text="@string/word_card_example"/>
            <TextView
                android:id="@+id/v_word_dialog_example_en"
                style="@style/TextAccentDark"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp"
                android:text="@string/word_card_example_en"/>
            <TextView
                android:id="@+id/v_word_dialog_example_ru"
                style="@style/TextMainDark"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/_10sdp"
                android:text="@string/word_card_example_ru"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>