<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ResultCourActivity">

    <TextView
        android:id="@+id/v_quiz_title"
        style="@style/TextTitlePage"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/res" />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_276sdp"
        android:layout_height="@dimen/_179sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/_5sdp"
        android:elevation="@dimen/_10sdp">
        <LinearLayout
            android:layout_width="@dimen/_256sdp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                style="@style/TextTitle"
                android:layout_width="@dimen/_256sdp"
                android:gravity="center"
                android:text="@string/res_title"/>

            <LinearLayout
                android:layout_width="@dimen/_256sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center">
                <TextView
                    style="@style/TextMainDark"
                    android:text="@string/res_subtitle1"/>
                <TextView
                    android:id="@+id/v_res_title"
                    style="@style/TextMainDark"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="Название"/>
            </LinearLayout>

            <TextView
                style="@style/TextAccentDark"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/res_subtitle2"/>
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp">
                <TextView
                    android:layout_row="0"
                    android:layout_column="0"
                    style="@style/QuizAnswer"
                    android:layout_width="@dimen/_82sdp"
                    android:background="@drawable/quiz_answer"
                    android:text="@string/res_correct"/>
                <TextView
                    android:id="@+id/v_res_correct"
                    android:layout_row="1"
                    android:layout_column="0"
                    style="@style/QuizAnswer"
                    android:layout_width="@dimen/_82sdp"
                    android:background="@drawable/quiz_answer"
                    android:text="0"/>

                <TextView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_row="0"
                    android:layout_column="1"
                    style="@style/QuizAnswer"
                    android:layout_width="@dimen/_82sdp"
                    android:background="@drawable/quiz_answer"
                    android:text="@string/res_total"/>
                <TextView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:id="@+id/v_res_total"
                    android:layout_row="1"
                    android:layout_column="1"
                    style="@style/QuizAnswer"
                    android:layout_width="@dimen/_82sdp"
                    android:background="@drawable/quiz_answer"
                    android:text="0"/>

                <TextView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_row="0"
                    android:layout_column="2"
                    style="@style/QuizAnswer"
                    android:layout_width="@dimen/_82sdp"
                    android:background="@drawable/quiz_answer"
                    android:text="@string/res_wrong"/>
                <TextView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:id="@+id/v_res_wrong"
                    android:layout_row="1"
                    android:layout_column="2"
                    style="@style/QuizAnswer"
                    android:layout_width="@dimen/_82sdp"
                    android:background="@drawable/quiz_answer"
                    android:text="0"/>
            </GridLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/btn_back_voc"
        style="@style/Btn"
        android:text="@string/res_btn"/>

</LinearLayout>