<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".CourseActivity">

    <LinearLayout
        android:layout_width="@dimen/_276sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/_30sdp">
        <ImageView
            android:onClick="startMain"
            android:id="@+id/startSetting"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/icon_back"/>
        <TextView
            style="@style/TextTitlePage"
            android:layout_marginStart="0dp"
            android:text="@string/course"/>
    </LinearLayout>
    <ImageView
        android:layout_width="@dimen/_256sdp"
        android:layout_height="@dimen/_256sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_gravity="center"
        android:src="@drawable/img_course"/>
    <TextView
        style="@style/TextSubtitle"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/course_subtitle"/>
    <TextView
        style="@style/TextTitle"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/course_title"/>
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_122sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp">
        <androidx.cardview.widget.CardView
            android:onClick="startBeginner"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_width="@dimen/_133sdp"
            android:layout_height="@dimen/_72sdp"
            android:gravity="center"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp">
            <TextView
                style="@style/TextAccentDark"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/accent_green"
                android:text="@string/course_card_beginner_title"/>
            <TextView
                style="@style/TextAccentDark"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_44sdp"
                android:fontFamily="@font/rubik"
                android:text="@string/course_card_beginner_subtitle"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="startElementary"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_width="@dimen/_133sdp"
            android:layout_height="@dimen/_72sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="center"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp">
            <TextView
                style="@style/TextAccentDark"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/accent_yellow"
                android:text="@string/course_card_elementary_title"/>
            <TextView
                style="@style/TextAccentDark"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_44sdp"
                android:fontFamily="@font/rubik"
                android:text="@string/course_card_elementary_subtitle"/>
        </androidx.cardview.widget.CardView>
    </GridLayout>

</LinearLayout>