<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".CourseElementaryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="@dimen/_276sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_30sdp">
                <ImageView
                    android:onClick="startCourse"
                    android:id="@+id/startSetting"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/icon_back"/>
                <TextView
                    style="@style/TextTitlePage"
                    android:layout_marginStart="0dp"
                    android:text="@string/course_elementary"/>
            </LinearLayout>
            <TextView
                style="@style/TextTitle"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_20sdp"
                android:text="@string/course_elementary_title"/>
            <TextView
                style="@style/TextSubtitle"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/course_elementary_subtitle"/>
            <androidx.cardview.widget.CardView
                style="@style/Card5"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp">
                <LinearLayout
                    android:layout_width="@dimen/_276sdp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp">
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/_5sdp"
                        android:backgroundTint="@color/course_elementary">
                        <TextView
                            style="@style/TextAccentLight"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/course_elementary_set1"/>
                    </androidx.cardview.widget.CardView>
                    <TextView
                        style="@style/TextAccentDark"
                        android:textSize="@dimen/_15sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/course_elementary_set1_title"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/elementaryList1"
                android:layout_width="@dimen/_276sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>




</LinearLayout>